adds receiver dependent sonde type list

--- a/app/src/main/res/raw/whatsnew.html
+++ b/app/src/main/res/raw/whatsnew.html
@@ -9,11 +9,12 @@
     </head>
     <body>
         <ul>
-            <li>Support for the (upcoming) <a href='https://www.ydiaeresis.eu/public/'>Heltec WiFi Lora32 v3 firmware</a></li>
+            <li>Support for the (upcoming) <a href='https://www.ydiaeresis.eu/public/'>Heltec WiFi Lora32 v3 and TTGO Lora32 firmware</a></li>
             <li>More battery friendly</li>
             <li>Enables Sondehub recovery notifications</li>
             <li>Better visibility for flight parameters</li>
             <li>Adds hunting mode</li>
+            <li>Predictions now use launch site statistics</li>
             <li>Fixes small bugs in the UI</li>
         </ul>
     </body>
