--- a/app/src/main/res/raw-it/whatsnew.html
+++ b/app/src/main/res/raw-it/whatsnew.html
@@ -9,11 +9,12 @@
     </head>
     <body>
         <ul>
-            <li>Supporto per Heltec WiFi Lora32 v3 (<a href='https://www.ydiaeresis.eu/public/'>firmware prossimamente disponibile)</a></li>
+            <li>Supporto per nuovo firmware per Heltec WiFi Lora32 v3 e TTGO Lora32 (<a href='https://www.ydiaeresis.eu/public/'> prossimamente disponibili</a>)</li>
             <li>Più attento ai consumi della batteria</li>
             <li>Permette di registrare i recuperi anche su Sondehub</li>
             <li>Migliore visibilità per i parametri di volo</li>
             <li>Aggiunge la modalità di caccia</li>
+            <li>La predizione adesso usa le statistiche della stazione di lancio</li>
             <li>Risolve piccoli problemi nell'interfaccia utente</li>
         </ul>
     </body>
