fixes missing disconnect from TTGO on timeout

--- a/app/src/main/res/raw-it/whatsnew.html
+++ b/app/src/main/res/raw-it/whatsnew.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <ul>
+            <li>Supporo per MySondyGO v3 (BLE)</li>
             <li>Supporto per nuovo firmware per Heltec WiFi Lora32 v3 e TTGO Lora32 (<a href='https://www.ydiaeresis.eu/public/'> prossimamente disponibili</a>)</li>
             <li>Più attento ai consumi della batteria</li>
             <li>Permette di registrare i recuperi anche su Sondehub</li>
