Bugfixes; new version for merging branches and releasing

--- a/app/src/main/res/raw/whatsnew.html
+++ b/app/src/main/res/raw/whatsnew.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <ul>
+            <li>Wrong predictions bug fixed</li>
             <li>Support for MySondyGO v3 (BLE)</li>
             <li>Support for the (upcoming) <a href='https://www.ydiaeresis.eu/public/'>Heltec WiFi Lora32 v3 and TTGO Lora32 firmware</a></li>
             <li>More battery friendly</li>
